# ArknightNexus

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: tauri-release.yml
md/: kr_character_table.json
src/: auto-imports.d.ts  components.d.ts  i18n.ts  main.ts  typed-router.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-android-back/: Cargo.toml
src-tauri/plugins/tauri-plugin-android-back/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-android-back/android/src/main/java/: AndroidBackPlugin.kt
src-tauri/plugins/tauri-plugin-android-back/src/: lib.rs  mobile.rs
src-tauri/src/: cache.rs  cache_model.rs  canonical.rs  commands.rs  data_sources.rs  errors.rs  lib.rs  main.rs  normalizers.rs  service.rs  user_store.rs
src-tauri/src/raw_models/: battle_equip.rs  building_data.rs  character.rs  favor_table.rs  gamedata_const.rs  handbook_team.rs  item_table.rs  mod.rs  range_table.rs  skill.rs  stage_table.rs  uniequip.rs
src/components/: ItemIcon.vue  OperatorPortrait.vue  PlanMaterialsGrid.vue  RichTextContent.vue  SliderLikeControl.vue  TopBar.vue
src/composables/: index.ts  useAutoPersist.ts  useInfiniteSlice.ts  useOperatorDetailViewModel.ts  usePlanCosts.ts  usePlanMaterialExpansion.ts  usePlanReferenceData.ts  usePotentialDiffDisplay.ts  useRegionPreference.ts  useRichDescription.ts  useSkillComparisonRows.ts
src/data/: operators.ts
src/layouts/: home.vue  operators.vue
src/pages/: index.vue  items.vue  operators.vue  (+2 more)
(+13 files in other folders)
