[package]
name = "arknights-nexus"
version = "0.1.0"
description = "A Tauri App"
authors = [ "RustyDream" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arknights_nexus_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.0"
tauri-plugin-upload = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "json",
  "rustls-tls"
] }
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread"
] }
chrono = { version = "0.4", features = [ "serde" ] }
thiserror = "2"
serde_path_to_error = "0.1"
