[package]
name = "tauri-plugin-android-back"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-android-back"

[lib]
name = "tauri_plugin_android_back"
path = "src/lib.rs"

[dependencies]
serde = "1"
tauri = { version = "2.8.5", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }
